[gd_scene load_steps=4 format=3 uid="uid://dm1vrnv5e47gm"]

[ext_resource type="PackedScene" uid="uid://ctspysrhlil1i" path="res://characters/player.tscn" id="1_hbpgo"]
[ext_resource type="Script" path="res://characters/deanInput.gd" id="2_14kl1"]
[ext_resource type="Texture2D" uid="uid://bjpeaebvfbiat" path="res://assets/dean.png" id="3_rxgh1"]

[node name="Dean" instance=ExtResource("1_hbpgo")]
scale = Vector2(0.25, 0.25)
script = ExtResource("2_14kl1")

[node name="Sprite2D" parent="CharacterBody2D" index="0"]
scale = Vector2(0.42, 0.42)
texture = ExtResource("3_rxgh1")

[node name="Label" parent="CharacterBody2D" index="3"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = -144.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 42

[connection signal="area_entered" from="CharacterBody2D/PlayerArea" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="CharacterBody2D/PlayerArea" to="." method="_on_area_2d_area_exited"]
